<resources>
    <string name="app_name">HelloWorld</string>
    <string name="msg_name">HelloWorld</string>
    <string name="service_name">Services Example</string>
    <string name="btn_start">Start service</string>
    <string name="btn_stop">Stop service</string>
    <string name="btn_broadcast">Broadcast Message</string>
    <string name="std_name">Student Name</string>
    <string name="add_btn">Add Name</string>
    <string name="get_btn">Get List</string>
    <string name="intent_name">Intent FIlter Sample</string>
    <string name="std_dept">Student department</string>
    <string name="open_browser">Start Browser</string>
    <string name="open_phone">Start Phone</string>
</resources>
