<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zero.project.helloworld.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/service_name"
        android:textColor="#3b7103"
        android:textSize="30sp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:onClick="startService"
        android:text="@string/btn_start" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startBtn"
        android:layout_centerHorizontal="true"
        android:onClick="stopService"
        android:text="@string/btn_stop" />

    <Button
        android:id="@+id/broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stopBtn"
        android:layout_centerHorizontal="true"
        android:onClick="broadcastIntent"
        android:text="@string/btn_broadcast" />

    <EditText
        android:id="@+id/std_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/broadcast"
        android:layout_centerHorizontal="true"
        android:hint="@string/std_name" />

    <EditText
        android:id="@+id/std_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/std_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/std_dept" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/std_dept"
        android:layout_centerHorizontal="true"
        android:onClick="addName"
        android:text="@string/add_btn" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:onClick="getStudents"
        android:text="@string/get_btn" />

</RelativeLayout>
